# jkf-hs

./: README.md  jkf-hs.cabal  stack.yaml
app/: Main.hs
src/JKF/: Type.hs
src/JKF/Parser/: Kif.hs
src/JKF/Parser/Kif/: Internal.hs
test/JKF/: TypeSpec.hs
test/JKF/Parser/: KifSpec.hs
