name:                jkf-hs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/suzuki-shin/jkf-hs#readme
license:             BSD3
license-file:        LICENSE
author:              SUZUKI Shinichiro
maintainer:          shinichiro.su@gmail.com
copyright:           2010 SUZUKI Shinichiro
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , JKF.Parser.Kif
                     , JKF.Parser.Kif.Internal
                     , JKF.Type
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , containers
                     , parsec
                     , text
  default-language:    Haskell2010

executable jkf-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , jkf-hs
  default-language:    Haskell2010

test-suite jkf-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , jkf-hs
                     , hspec
                     , doctest
                     , unordered-containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/suzuki-shin/jkf-hs
